Fixed field validation. Still ugly code, but increased readability

--- a/css/newmain.css
+++ b/css/newmain.css
@@ -196,6 +196,15 @@ input:checked + .slider:before {
   border-radius: 8px;
 }
 
+.title {
+  color: inherit;
+  border-radius: 8px;
+  border-style: inset;
+  min-height: 40px;
+  border-width: 2px;
+  padding: 5px;
+  padding-inline: 2px;
+}
 .input-group {
     display:grid;
     padding: 5px;
